# rssib_solutions

./: CMakeLists.txt  Database.cpp  Database.h  DocumentAndKitArgument.cpp  DocumentAndKitArgument.h  DocumentAndKitInput.h  DocumentAndKitStdInput.cpp  DocumentAndKitStdInput.h  DocumentFileParser.cpp  DocumentFileParser.h  KitFileParser.cpp  KitFileParser.h  Product.cpp  Product.h  README.md  docmument.txt  kit.txt  main.cpp
